--- a/luci-app-passwall/po/zh-cn/passwall.po
+++ b/luci-app-passwall/po/zh-cn/passwall.po
@@ -1141,6 +1141,9 @@ msgstr "Naiveproxy协议"
 msgid "V2ray Protocol"
 msgstr "V2ray协议"
 
+msgid "Alter ID"
+msgstr "额外ID(alterId)"
+
 msgid "User Level"
 msgstr "用户等级(level)"
 
